2007-11-24  Laszlo Gombos  <laszlo.gombos@gmail.com>

        Reviewed by Sam Weinig.

        Add printf format attribute to several functions. Use the the new WTF_ATTRIBUTE_PRINTF define.

        * dom/XMLTokenizer.cpp:
        * dom/XMLTokenizer.h:
        * platform/DeprecatedString.h:
        * platform/PlatformString.h:

2007-11-25  Dan Bernstein  <mitz@apple.com>

        Reviewed by Adam Roben.

        - fix off-center error images

        Covered by many pixel tests with missing images

        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::paint): Account for the 1 pixel outline when
        positioning the error image.

2007-11-25  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Fix filename case for case-sensitive filesystems.

        * WebCoreSources.bkl:

2007-11-22  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Adam Roben.

        Fixes: http://bugs.webkit.org/show_bug.cgi?id=15564

        Fix problems with hidden glyphs. They were taken into account for quite
        some operations (hit testing, length calulcations etc..) except painting.
        Especially fixes boundaries of <textPath> (see using Web Inspector) if
        text-anchor isn't equal to 'start'.

        Added testcase:
        svg/text/textPathBoundsBug.svg

        Fixed testcase: (all showed text selection problems on text paths)
        svg/batik/text/textGlyphOrientationHorizontal.svg
        svg/batik/text/textOnPath.svg
        svg/batik/text/textOnPath3.svg
        svg/batik/text/verticalTextOnPath.svg
        svg/text/text-align-04-b.svg
        svg/W3C-SVG-1.1/text-align-04-b.svg

        * rendering/SVGCharacterLayoutInfo.cpp:
        (WebCore::SVGChar::isHidden):
        * rendering/SVGCharacterLayoutInfo.h:
        (WebCore::SVGCharOnPath::SVGCharOnPath):
        * rendering/SVGInlineTextBox.cpp:
        (WebCore::SVGInlineTextBoxClosestCharacterToPositionWalker::chunkPortionCallback):